[gd_scene load_steps=7 format=3 uid="uid://dijovwxg0sd6p"]

[ext_resource type="Texture2D" uid="uid://qq6n2y0wj6b4" path="res://assets/textures/ui/ui_sheet.png" id="1_icx52"]
[ext_resource type="Script" uid="uid://dh0k5sn4p4vqj" path="res://scripts/ui/scuttle.gd" id="2_tjaus"]
[ext_resource type="AudioStream" uid="uid://dpfywfd3ilogs" path="res://assets/sounds/button_click_on.wav" id="3_fvn8o"]
[ext_resource type="AudioStream" uid="uid://b4bq733feokvy" path="res://assets/sounds/repair_ping.wav" id="4_dvggf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tjaus"]
atlas = ExtResource("1_icx52")
region = Rect2(0, 320, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_on507"]
atlas = ExtResource("1_icx52")
region = Rect2(96, 320, 48, 32)

[node name="Scuttle" type="TextureProgressBar"]
offset_right = 48.0
offset_bottom = 32.0
max_value = 0.75
step = 0.02
texture_under = SubResource("AtlasTexture_tjaus")
texture_progress = SubResource("AtlasTexture_on507")
script = ExtResource("2_tjaus")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Surface"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_fvn8o")

[node name="ButtonReady" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_dvggf")
volume_db = -10.0
pitch_scale = 0.81

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
